--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <article>
     <header>
-        <h1> Chris DeMarchi </h1>
+        <h1> I'm Chris DeMarchi and this is the root of my website</h1>
         
     </header>
 </article>
