--- a/ITIS3135/index.html
+++ b/ITIS3135/index.html
@@ -1,6 +1,6 @@
 <article>
     <header>
-        <h1> This is my class folder! </h1>
+        <h1> I'm Chris DeMarchi and this is my ITIS3135 First Course Page! </h1>
         
     </header>
 </article>
