--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
 <article>
-    <header>
-        <h1> I'm Chris DeMarchi and this is the root of my website</h1>
-        
-    </header>
+        <h1> Chris DeMarchi's Webspace </h1>
+	<a href = "itis3135/">Click to go to ITIS3135 Site</a>
 </article>
