--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <article>
         <h1> Chris DeMarchi's Webspace </h1>
-	<a href = "itis3135/">Click to go to ITIS3135 Site</a>
+	<a href = "ITIS3135/">Click to go to ITIS3135 Site</a>
 </article>
