--- a/ITIS3135/introduction.html
+++ b/ITIS3135/introduction.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris DeMarchi's Colorful Dandan || ITIS 3135 Homepage </title>
+    <title>Chris DeMarchi's Colorful Dandan || ITIS 3135 Introduction </title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
@@ -18,8 +18,21 @@
         </nav>
     </header>
     <main>
-        <h2>ITIS 3135 Home</h2>
-        <p>This is all the content for my ITIS 3135 class</p>
+        <h2>Introduction</h2>
+        <h2>Chris DeMarchi || Colorful Dandan</h2>
+        <figure>
+            <img src="images/IMG_0829.jpg" alt="Chris DeMarchi with cat Ganon">
+            <figcaption>Chris DeMarchi</figcaption>
+        </figure>
+        <ul>
+            <li><b>Personal Background: </b>I was born in Long Island, NY and moved to Apex, NC at the age of 10. I met a lot of really cool people, some of which ended up coming to UNCC with me</li>
+            <li><b>Professional Background: </b>I've only ever worked as a server or a cook, currently enjoying making the food more than the customers but every once in a while you meet some amazing people.</li>
+            <li><b>Academic Background: </b>Graduated high school in 2020 (so does it even count?). Starting my senior year of concentration in software systems and networking.</li>
+            <li><b>Background in this Subject: </b>I've been using and working with computers since before I could walk, they have always been a part of my life because of how impactful and interesting I find them.</li>
+            <li><b>Primary Computer Platform: </b>Windows 11</li>
+            <li><b>Funny/Interesting Item to Remember me by: </b>My IGN is CreamSoda and I'm a big 'ol gamer that plays for the schools league team. </li>
+            <li><b>I'd also like to Share: </b>My cat's name is Ganon 🐗</li>
+        </ul>
     </main>
     <footer>
         <nav>
