--- a/index.html
+++ b/index.html
@@ -1,4 +1,2 @@
-<article>
-        <h1> Chris DeMarchi's Webspace </h1>
-	<a href = "ITIS3135/">Click to go to ITIS3135 Site</a>
-</article>
+Hi, you've reached my root page, Chris DeMarchi
+<a href="ITIS3135/">Click here for my 3135 course</a>
