--- a/ITIS3135/introduction.html
+++ b/ITIS3135/introduction.html
@@ -48,7 +48,7 @@
             ||
             <a href="https://www.linkedin.com/in/christopher-demarchi-30a5961a0/">LinkedIn</a>
         </nav>
-        <p>Page Built by Colorful Dandan Enterprises &copy; 2024</p>
+        <p>Page Built by <a href="https://demarchidesigns.net">DeMarchi Designs</a> &copy; 2024</p>
         <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
             <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
            </a>
