--- a/ITIS3135/contract.html
+++ b/ITIS3135/contract.html
@@ -22,7 +22,7 @@
         <p> I, Chris DeMarchi agree to abide by the terms in my Spring 2024 ITIS 3135 Web App Design and Development with my instructor, D.I. von Briesen.
             I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
             Signed:
-                  Chris J.O. DeMarchi, 21st January 2024</p>
+                  <i>Chris J.O. DeMarchi, 21st January 2024</i></p>
     </main>
     <footer>
         <nav>
