--- a/index.html
+++ b/index.html
@@ -1,2 +1,32 @@
-Hi, you've reached my root page, Chris DeMarchi
-<a href="ITIS3135/">Click here for my 3135 course</a>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chris DeMarchi</title>
+    <style>
+        body {
+            background-color: #bdb0b0; 
+            text-align: center; 
+        }
+
+        h1 {
+            color: #0e0d0d; 
+        }
+
+        a {
+            color: #033797; 
+            text-decoration: none;
+            font-size: 1.5em; 
+        }
+
+        a:hover {
+            text-decoration: underline; 
+        }
+    </style>
+</head>
+<body>
+    <h1>Chris DeMarchi</h1>
+    <a href="ITIS3135/">Click here for my 3135 course</a>
+</body>
+</html>
