--- a/ITIS3135/demarchidesigns.net/index.html
+++ b/ITIS3135/demarchidesigns.net/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DeMarchi Designs</title>
+    <!--https://coolors.co/799bcf-001021-034748-a5e6ba-e9d985-->
     <style>
         body{
     background-color: rgb(121, 155, 207);
     text-align: center;
-    color: rgb(245, 245, 245);
+    color: rgb(165, 230, 186);
     font-family:Georgia, 'Times New Roman', Times, serif
 }
         a{
@@ -28,6 +29,7 @@
 
         h2{
     text-align: center;
+    color: rgb(0, 16, 33);
 }
 
         img{
@@ -38,14 +40,44 @@
     text-align: center;
     font-style: italic;
 }
+p{
+    color: rgb(233, 217, 133);
+}
+ul, li{
+    color: rgb(3, 71, 72);
+    text-align: left;
+}
+h3{
+    text-align: center;
+    color: rgb(0, 16, 33);
+}
     </style>
 </head>
 <body>
     <header>
         <h1>DeMarchi Designs</h1>
+        <img src="fish-md.png" alt="clipart-fish-38.html">
     </header>
     <main>
-        
+        <p>DeMarchi Designs is a design firm oriented on giving customers the highest quality web-pages. Our designers are all highly qualified and have been in the field for a minimum of 5 years.
+            If you want a clean and well polished website, then look no further.
+        </p>
+        <p>When choosing DeMarchi Designs you can expect:</p>
+        <ul>
+            <li>Low production times</li>
+            <li>High quality work</li>
+            <li>Immediate responses</li>
+            <li>24/7 Customer support</li>
+            <li>Satisfactory troubleshooting</li>
+        </ul>
+        <h2>DeMarchi Designs is guarenteed to have your website looking the best it can.
+            If you have a website that is struggling, reach out to us!
+        </h2>
+        <h3>
+            Phone: (xxx-xxx-xxxx)<br>
+            Email: DeMarchiDesigns@email.net<br>
+            Address: 44445 Fish Lane Dr.
+        </h3>
     </main>
     <footer>
          <p>&copy Done By DeMarchi</p>
