--- a/ITIS3135/forms.html
+++ b/ITIS3135/forms.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Forms</title>
-    <link rel="stylesheet" href="formstyles.css">
+    <link rel="stylesheet" href="styles/default.css">
 </head>
 
 <body>
