--- a/ITIS3135/forms.html
+++ b/ITIS3135/forms.html
@@ -21,6 +21,8 @@
             <a href="tables.html">HTML Table</a>
             ||
             <a href="forms.html">HTML Form</a>
+            ||
+            <a href="firstscripts.html">First Java Scripts</a>
         </nav>
     </header>
 
