--- a/ITIS3135/firstscripts.html
+++ b/ITIS3135/firstscripts.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris DeMarchi's Colorful Dandan || ITIS 3135 Contract </title>
+    <title> First Java Scripts </title>
     <link rel="stylesheet" href="styles/default.css">
 </head>
 <body>
@@ -24,12 +24,24 @@
         </nav>
     </header>
     <main>
-        <h2>Contract</h2>
-        <p> I, Chris DeMarchi agree to abide by the terms in my Spring 2024 ITIS 3135 Web App Design and Development with my instructor, D.I. von Briesen.
-            I understand that all work that I do on my school and personal websites will be publicly available to the world. I will not put information there that is inappropriate for schoolwork, or that I wish to keep private.
-            Signed:
-                  <i>Chris J.O. DeMarchi, 21st January 2024</i></p>
+        <h2>First Java Scripts</h2>
+        <h3 id="dateTime"></h3>
+        <label for="nameInput">Enter your name:</label>
+        <input type="text" id="nameInput"><br>
+        <label for="feelingInput">How are you feeling?</label>
+        <input type="text" id="feelingInput"><br>
+        <label for="numberInput">Enter your favorite number (0 to 10):</label>
+        <input type="number" id="numberInput" min="0" max="10"><br>
+        <button onclick="submitInfo()">Submit</button>
     </main>
+    <h4>
+        <button onclick="fishingFacts()">Fishing Facts</button>
+        <button onclick="fishingJokes()">Fishing Jokes</button>
+        <button onclick="fishSpecies()">Fish Species</button>
+        <button onclick="fishingTips()">Fishing Tips</button>
+        <p id="output"></p>
+    </h4>
+    <script src="scripts/scripts.js"></script>
     <footer>
         <nav>
             <a href="https://webpages.charlotte.edu/cdemarch/">Charlotte.edu</a>
