--- a/ITIS3135/index.html
+++ b/ITIS3135/index.html
@@ -19,6 +19,8 @@
             <a href="tables.html">HTML Table</a>
             ||
             <a href="forms.html">HTML Form</a>
+            ||
+            <a href="firstscripts.html">First Java Scripts</a>
         </nav>
     </header>
     <main>
