--- a/ITIS3135/contract.html
+++ b/ITIS3135/contract.html
@@ -8,20 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Chris DeMarchi's Colorful Dandan || ITIS 3135 </h1>
-        <nav>
-            <a href="./">Home</a>
-            ||
-            <a href="introduction.html">Introduction</a>
-            ||
-            <a href="contract.html">Contract</a>
-            ||
-            <a href="tables.html">HTML Table</a>
-            ||
-            <a href="forms.html">HTML Form</a>
-            ||
-            <a href="firstscripts.html">First Java Scripts</a>
-        </nav>
+        <div data-include="components/header.html"></div>
     </header>
     <main>
         <h2>Contract</h2>
@@ -31,32 +18,12 @@
                   <i>Chris J.O. DeMarchi, 21st January 2024</i></p>
     </main>
     <footer>
-        <nav>
-            <a href="https://webpages.charlotte.edu/cdemarch/">Charlotte.edu</a>
-            ||
-            <a href="https://github.com/ChrisDeMarchi">Github</a>
-            ||
-            <a href="https://chrisdemarchi.github.io/">Github.io</a>
-            ||
-            <a href="https://www.freecodecamp.org/cdemarch">freeCodeCamp</a>
-            ||
-            <a href="https://www.codecademy.com/profiles/cdemarchUNCC">Codeacademy</a>
-            ||
-            <a href="https://www.linkedin.com/in/christopher-demarchi-30a5961a0/">LinkedIn</a>
-        </nav>
-        <p>Page Built by <a href="demarchidesigns.net/">DeMarchi Designs</a> &copy; 2024</p>
-        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-            <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-           </a>
-           <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-             </a>
-           
-           <script>
-              document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-                   document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-           </script>
-           
+        <div data-include="components\footer.html"></div>
     </footer>
+    <script>
+        document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
+             document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+     </script>
+     <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 </html>
