--- a/ITIS3135/demarchidesigns.net/index.html
+++ b/ITIS3135/demarchidesigns.net/index.html
@@ -70,17 +70,30 @@ h3{
             <li>24/7 Customer support</li>
             <li>Satisfactory troubleshooting</li>
         </ul>
-        <h2>DeMarchi Designs is guarenteed to have your website looking the best it can.
-            If you have a website that is struggling, reach out to us!
+        <h2>
+            DeMarchi Designs
         </h2>
-        <h3>
+        <h3>DeMarchi Designs is guarenteed to have your website looking the best it can.
+            If you have a website that is struggling, reach out to us!
+        </h3>
+        <h4>
             Phone: (xxx-xxx-xxxx)<br>
             Email: DeMarchiDesigns@email.net<br>
             Address: 44445 Fish Lane Dr.
-        </h3>
+        </h4>
     </main>
     <footer>
-         <p>&copy Done By DeMarchi</p>
+         <p>&copy; Done By DeMarchi, <a href="https://www.freecodecamp.org/certification/cdemarch/responsive-web-design">Certified in RWD</a></p>
+         <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
+            <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
+           </a>
+           <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
+            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
+             </a>
     </footer>
+    <script>
+        document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
+             document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+     </script>
 </body>
 </html>
