--- a/ITIS3135/forms.html
+++ b/ITIS3135/forms.html
@@ -10,20 +10,7 @@
 
 <body>
     <header>
-        <h1>HTML Form</h1>
-        <nav>
-            <a href="./">Home</a>
-            ||
-            <a href="introduction.html">Introduction</a>
-            ||
-            <a href="contract.html">Contract</a>
-            ||
-            <a href="tables.html">HTML Table</a>
-            ||
-            <a href="forms.html">HTML Form</a>
-            ||
-            <a href="firstscripts.html">First Java Scripts</a>
-        </nav>
+        <div data-include="components/header.html"></div>
     </header>
 
     <main>
@@ -44,10 +31,10 @@
             <label for="check1">Headache</label>
             <input type="checkbox" id="check2" name="checkboxGroup" value="option2">
             <label for="check2">Nausea</label>
-            <input type="checkbox" id="check2" name="checkboxGroup" value="option2">
-            <label for="check2">Overwhelming Fear</label>
-            <input type="checkbox" id="check2" name="checkboxGroup" value="option2">
-            <label for="check2">Merman Sighting</label>
+            <input type="checkbox" id="check3" name="checkboxGroup" value="option3">
+            <label for="check3">Overwhelming Fear</label>
+            <input type="checkbox" id="check4" name="checkboxGroup" value="option4">
+            <label for="check4">Merman Sighting</label>
 
             <label>Did the Dandan(s) Surface?:</label>
             <input type="radio" id="radio1" name="radioGroup" value="option1">
@@ -57,10 +44,11 @@
 
             <label for="select">How Many Dandans Were Sighted?:</label>
             <select id="select" name="select" required>
+                <option value="" disabled selected>Select an option</option>
                 <option value="option1">1</option>
                 <option value="option2">2</option>
                 <option value="option3">3</option>
-                <option value="option3">4 or more</option>
+                <option value="option4">4 or more</option>
             </select>
 
             <button type="reset" class="dark-button">Reset</button>
@@ -69,33 +57,13 @@
     </main>
 
     <footer>
-        <nav>
-            <a href="https://webpages.charlotte.edu/cdemarch/">Charlotte.edu</a>
-            ||
-            <a href="https://github.com/ChrisDeMarchi">Github</a>
-            ||
-            <a href="https://chrisdemarchi.github.io/">Github.io</a>
-            ||
-            <a href="https://www.freecodecamp.org/cdemarch">freeCodeCamp</a>
-            ||
-            <a href="https://www.codecademy.com/profiles/cdemarchUNCC">Codeacademy</a>
-            ||
-            <a href="https://www.linkedin.com/in/christopher-demarchi-30a5961a0/">LinkedIn</a>
-        </nav>
-        <p>Page Built by <a href="demarchidesigns.net/">DeMarchi Designs</a> &copy; 2024</p>
-        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-            <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-           </a>
-           <a href="https://jigsaw.w3.org/css-validator/check/referer" id="validation_link_css">
-            <img style="border:0;width:88px;height:31px" src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS!">
-             </a>
-           
-           <script>
-              document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-                   document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-           </script>
-           
+        <div data-include="components/footer.html"></div>
     </footer>
+    <script>
+        document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
+             document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+     </script>
+    <script src="scripts/HTMLInclude.min.js"></script>
 </body>
 
 </html>
