fixed the calculator to remove imbedded js

--- a/ITIS3135/calculator_try.html
+++ b/ITIS3135/calculator_try.html
@@ -15,23 +15,23 @@
         <div class="calculator">
             <div class="display" id="display">0</div>
             <div class="buttons">
-                <button onclick="appendNum(7)">7</button>
-                <button onclick="appendNum(8)">8</button>
-                <button onclick="appendNum(9)">9</button>
-                <button onclick="clearDisplay()">C</button>
-                <button onclick="appendNum(4)">4</button>
-                <button onclick="appendNum(5)">5</button>
-                <button onclick="appendNum(6)">6</button>
-                <button onclick="operate('+')">+</button>
-                <button onclick="appendNum(1)">1</button>
-                <button onclick="appendNum(2)">2</button>
-                <button onclick="appendNum(3)">3</button>
-                <button onclick="operate('-')">-</button>
-                <button onclick="appendNum(0)">0</button>
-                <button onclick="appendDecimal()">.</button>
-                <button onclick="calculate()">=</button>
-                <button onclick="operate('*')">*</button>
-                <button onclick="operate('/')">/</button>
+                <button id="button7">7</button>
+                <button id="button8">8</button>
+                <button id="button9">9</button>
+                <button id="buttonClear">C</button>
+                <button id="button4">4</button>
+                <button id="button5">5</button>
+                <button id="button6">6</button>
+                <button id="buttonAdd">+</button>
+                <button id="button1">1</button>
+                <button id="button2">2</button>
+                <button id="button3">3</button>
+                <button id="buttonSubtract">-</button>
+                <button id="button0">0</button>
+                <button id="buttonDecimal">.</button>
+                <button id="buttonCalculate">=</button>
+                <button id="buttonMultiply">*</button>
+                <button id="buttonDivide">/</button>
             </div>
         </div>
     </main>
@@ -39,6 +39,6 @@
         <div data-include="components/footer.html"></div>
     </footer>
     <script src="scripts/HTMLInclude.min.js"></script>
-    <script src="scripts/calculator_try.js"></script>
+    <script src="calculator_try.js"></script>
 </body>
 </html>
