--- a/ITIS3135/calculator_try.html
+++ b/ITIS3135/calculator_try.html
@@ -39,6 +39,6 @@
         <div data-include="components/footer.html"></div>
     </footer>
     <script src="scripts/HTMLInclude.min.js"></script>
-    <script src="calculator_try.js"></script>
+    <script src="scripts/calculator_try.js"></script>
 </body>
 </html>
