--- a/ITIS3135/hobby/index.html
+++ b/ITIS3135/hobby/index.html
@@ -98,8 +98,8 @@ figure img {
                 <li><a href="#home">Home</a></li>
                 <li><a href="#when">Best Times</a></li>
                 <li><a href="#where">Best Locations</a></li>
-                <li><a href="#how">How</a></li>
-                <li><a href="#why">Why</a></li>
+                <li><a href="#how">How to get better</a></li>
+                <li><a href="#why">Why we love it</a></li>
                 <li><a href="#AI-prompts">AI Content</a></li>
             </ul>
         </nav>
