--- a/ITIS3135/hobby/index.html
+++ b/ITIS3135/hobby/index.html
@@ -96,10 +96,10 @@ figure img {
             <ul>
                 <li><a href="#about">About</a></li>
                 <li><a href="#home">Home</a></li>
-                <li><a href="#when">Best Times</a></li>
+                <li><a href="#when">Best Moments</a></li>
                 <li><a href="#where">Best Locations</a></li>
-                <li><a href="#how">How to get better</a></li>
-                <li><a href="#why">Why we love it</a></li>
+                <li><a href="#how">How to Get Better</a></li>
+                <li><a href="#why">Why we Love it</a></li>
                 <li><a href="#AI-prompts">AI Content</a></li>
             </ul>
         </nav>
