--- a/ITIS3135/hobby/index.html
+++ b/ITIS3135/hobby/index.html
@@ -230,7 +230,7 @@ figure img {
         
     </main>
     <footer>
-        <p>Page Built by <a href="demarchidesigns.net/">DeMarchi Designs</a>&copy;2024</p>
+        <p>Page Built by <a href="https://webpages.charlotte.edu/cdemarch/ITIS3135/demarchidesigns.net/">DeMarchi Designs</a>&copy;2024</p>
         <a href="https://validator.w3.org/check?uri=referer">
             <img src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML">
         </a>
