--- a/ITIS3135/hobby/index.html
+++ b/ITIS3135/hobby/index.html
@@ -14,6 +14,8 @@
     color: #333;
 }
 
+
+
 header {
     background-color: #333;
     color: white;
@@ -83,6 +85,19 @@ figure {
 figure img {
     max-width: 100%; 
     height: auto; 
+}
+
+footer button {
+    border: none; 
+    background-color: transparent; 
+    color: white; 
+    padding: 0.5rem 1rem; 
+    border-radius: 5px;
+    transition: background-color 0.3s; 
+}
+
+footer button:hover {
+    background-color: rgba(255, 255, 255, 0.1); 
 }
 
 
@@ -238,7 +253,7 @@ figure img {
             <img src="https://jigsaw.w3.org/css-validator/images/vcss" alt="Valid CSS">
         </a>
         <button onclick="window.open('https://wave.webaim.org/report#/https://webpages.charlotte.edu/cdemarch/ITIS3135/hobby/index.html', '_blank')">
-            Accessibility Validation
+            <img src="images/button_validation_wcag.png" alt="Accessibility Validation">
         </button>
     </footer>
     
