--- a/ITIS3135/drawing.html
+++ b/ITIS3135/drawing.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chris DeMarchi's Colorful Dandan || Drawing </title>
     <link rel="stylesheet" href="styles/default.css">
+    <script src="https://cdn.jsdelivr.net/npm/p5@1.9.2/lib/p5.js"></script>
+    <script src="scripts\sketch.js"></script>
 </head>
 <body>
     <header>
