--- a/ITIS3135/demarchidesigns.net/index.html
+++ b/ITIS3135/demarchidesigns.net/index.html
@@ -52,6 +52,7 @@ h3{
     color: rgb(0, 16, 33);
 }
     </style>
+    <script src="https://farawayforests.com/cdn/accumulus/accumulus.min.js"></script>
 </head>
 <body>
     <header>
