fixed and added

--- a/ITIS3135/project/recommendations.html
+++ b/ITIS3135/project/recommendations.html
@@ -13,7 +13,11 @@
     </header>
     <main>
         <h2>Home</h2>
-        
+        <iframe src="https://www.example.com" width="600" height="400"></iframe>
+        <iframe src="https://www.example.com" width="600" height="400"></iframe>
+        <iframe src="https://www.example.com" width="600" height="400"></iframe>
+        <iframe src="https://www.example.com" width="600" height="400"></iframe>
+        <iframe src="https://www.example.com" width="600" height="400"></iframe>
        
     </main>
     <footer>
