--- a/ITIS3135/project/works.html
+++ b/ITIS3135/project/works.html
@@ -14,13 +14,31 @@
     <main>
         <h2>Works</h2>
         <div>
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTjYLcOHfwO4W_kUb4hQxP8_rivKm1B6PYJ_XXXXXXXXX/pub?embedded=true" width="800" height="600"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vSICSWNH0LNpAyx-7gZ8o3E6MgAf8vcg-ldlCDzjGauBNVCS-eWzTSkEtNFNltaOeQsq0WJl8pHa2_j/pub?embedded=true"></iframe>
         </div>
         <div>
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTjYLcOHfwO4W_kUb4hQxP8_rivKm1B6PYJ_XXXXXXXXX/pub?embedded=true" width="800" height="600"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vQcQFvyQbqyg5hKnzKw26rdIUIzr_50cbePIW-zNBv6Lf7t9ooDoEOelhXIRciaW96_sFYPiRogK8oc/pub?embedded=true"></iframe>
         </div>
         <div>
-            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTjYLcOHfwO4W_kUb4hQxP8_rivKm1B6PYJ_XXXXXXXXX/pub?embedded=true" width="800" height="600"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vQZSqiw9KfNeCsKKKTFuclmLYfJXnPDGu_95Igk-DuX-4FtRiRE1H99PCloon-F1DnpXsVhiWykLQpU/pub?embedded=true"></iframe>
+        </div>
+        <div>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vRboWtis9e4WV61LCSfD_qtxB59iB_DUdqS8ZPdzBMTHqLjMt2b-c6KjNopgZVrmCQfGkiPWKDA2FHP/pub?embedded=true"></iframe>
+        </div>
+        <div>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vR4fbJKMEYbqZBPdBiGYoNUVMp6xL1J1m1owiZuM_tSfECC0yZH0fmIv04WFCTrJGUMGNG41oRYmYV4/pub?embedded=true"></iframe>
+        </div>
+        <div>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vQ_mv7AMhrAimSrb9PEpCyMqch-jG0ThVl5CzbGp2gIktJjyIazc326dKEZY-Ms0KFY6NrLUnI_dCnb/pub?embedded=true"></iframe>
+        </div>
+        <div>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTA5rhA_JZ_awxrQlvN0UDrynbM1neTorgVKzzOMGn2pK3fveqsFc78Q-4jH8Cr-g2WJckrqn1XLiCv/pub?embedded=true"></iframe>
+        </div>
+        <div>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTeeHyM4hKRwyuw0ws5ccgnJpUZvL1mVJdoV0ljXjIc4H4A_xevV4RZ4Edaag7f53KZfPgnbK-aITuR/pub?embedded=true"></iframe>
+        </div>
+        <div>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vRfz41SuCwOCyw-mU4TjLdqUAnHWAuUgIwwXP9is88K-7B6O2BXxIxDPzeYTN8vOTwXXPsggo6MIAgY/pub?embedded=true"></iframe>
         </div>
        
     </main>
