--- a/ITIS3135/project/about.html
+++ b/ITIS3135/project/about.html
@@ -1,9 +1,15 @@
+<style>
+    ul{
+        margin-right: 35%;
+    }
+</style>
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris DeMarchi's Colorful Dandan || About </title>
+    <title>Bella Brown || About </title>
     <link rel="stylesheet" href="../styles/default.css">
     <script src="https://farawayforests.com/cdn/accumulus/accumulus.min.js"></script>
 </head>
@@ -13,11 +19,32 @@
     </header>
     <main>
         <h2>About</h2>
-        <p>"At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate 
-            non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. 
-            Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, 
-            omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et 
-            molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat."</p>
+        <p>Bella Brown is a studying historian at East Carolina University, with a concentration in historical studies and a minor in ethnic studies. She has written on multiple topics, 
+            such as North Carolina’s development, Colonial America life, and resegregation in southern public schools. She is aiming to get her masters later in life and continue to write on 
+            American history. Brown is motivated to continue her academic journey to not only use her research to correct misconceptions about American history, but also to make historical 
+            learning more accessible to the general public with her background as a previous history education major.
+            </p>
+            <ul> <strong>Interests: </strong>
+                <li>
+                    Native American history
+                </li>
+                <li>
+                    Colonization of the Americas
+                </li>
+                <li>
+                    American Civil War
+                </li>
+                <li>
+                    Reconstruction
+                </li>
+                <li>
+                    Feminism in America
+                </li>
+                <li>
+                    Civil Rights Movement
+                </li>
+            </ul>
+
             <div>
                 <img src="BBY.png" alt="Bella Brown" width="10" height="10">
 
