--- a/ITIS3135/project/index.html
+++ b/ITIS3135/project/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris DeMarchi's Colorful Dandan || Home </title>
+    <title>Bella Brown || Home </title>
     <link rel="stylesheet" href="../styles/default.css">
     <script src="https://farawayforests.com/cdn/accumulus/accumulus.min.js"></script>
 </head>
@@ -18,12 +18,7 @@
             Bella Brown is a historian with a passion for uncovering the untold stories of the past. 
             Explore her works and discover the depth of her research and writing by using the navigational bar at the top!
         </p>
-        <p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque 
-            corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, 
-            id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil 
-            impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis 
-            aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis 
-            voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat.</p>
+        
         
     </main>
     <footer>
