--- a/ITIS3135/project/recommendations.html
+++ b/ITIS3135/project/recommendations.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris DeMarchi's Colorful Dandan || Home </title>
+    <title>Bella Brown || Recommendations </title>
     <link rel="stylesheet" href="../styles/default.css">
     <script src="https://farawayforests.com/cdn/accumulus/accumulus.min.js"></script>
 </head>
@@ -12,12 +12,11 @@
         <div data-include="components/header.html"></div>
     </header>
     <main>
-        <h2>Home</h2>
-        <iframe src="https://www.example.com" width="600" height="400"></iframe>
-        <iframe src="https://www.example.com" width="600" height="400"></iframe>
-        <iframe src="https://www.example.com" width="600" height="400"></iframe>
-        <iframe src="https://www.example.com" width="600" height="400"></iframe>
-        <iframe src="https://www.example.com" width="600" height="400"></iframe>
+        <h2>Recommendations</h2>
+        <iframe src="https://www.goodreads.com/book/show/53276247-the-tar-heel-state" width="600" height="400"></iframe>
+        <iframe src="https://www.goodreads.com/book/show/144338.For_Cause_and_Comrades" width="600" height="400"></iframe>
+        <iframe src="https://www.goodreads.com/book/show/296662.Lies_My_Teacher_Told_Me" width="600" height="400"></iframe>
+        <iframe src="https://www.goodreads.com/book/show/12493276-for-the-common-defense" width="600" height="400"></iframe>
        
     </main>
     <footer>
