--- a/ITIS3135/project/recommendations.html
+++ b/ITIS3135/project/recommendations.html
@@ -13,10 +13,19 @@
     </header>
     <main>
         <h2>Recommendations</h2>
-        <iframe src="https://www.goodreads.com/book/show/53276247-the-tar-heel-state" width="600" height="400"></iframe>
-        <iframe src="https://www.goodreads.com/book/show/144338.For_Cause_and_Comrades" width="600" height="400"></iframe>
-        <iframe src="https://www.goodreads.com/book/show/296662.Lies_My_Teacher_Told_Me" width="600" height="400"></iframe>
-        <iframe src="https://www.goodreads.com/book/show/12493276-for-the-common-defense" width="600" height="400"></iframe>
+        <div id="slideshow-container">
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vQKN3Mgh5uVD_DaNkkDHGdxcM-X5tcdhoq1eTzTTt4YIrsb_W-PPxR6jdxnr0vu2tg1y0xuDXrzJhDp/pub?embedded=true" width="800"height="600"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTHTzOt3pshkIX9Rt1qATLAi6PcwdicUwiMp4uF4U1hL6L4H7nkaHY48Hx7LKoF00nNWXKBmOCnQ_Qv/pub?embedded=true" width="800"height="600"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vSl4VwYY-tfldr7n8gb51CtO41_zVJIqTaiZxpQVn980X5QPAvPIZPzF0w3weBvzEhu7PQB_wgpXU05/pub?embedded=true" width="800"height="600"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTKVVJsLFenp0Bk2E267Vd5Hl3Owbph7ZzjkT-OnJOQuqD_lDIAaX8qhIGabUz96QQuxf2_eV3lW7bk/pub?embedded=true" width="800"height="600"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vSwAB8NQSoQzPnqRMcnhNDISMW5R8sp_6FweCACcO2ymqdkmS3UPkXvsz5-H_JzmlEHnxZpExtwWX5G/pub?embedded=true" width="800"height="600"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vR-0S8H8_65FMyv_OwAHJWWDqv7Sp0KBcnTNVs5Ao82YN4CqeCSTwP6gr9Epd6c_xhYa0zyDImOM2fa/pub?embedded=true" width="800"height="600"></iframe>
+            <iframe src="https://docs.google.com/document/d/e/2PACX-1vTFOkYgxjSBOC5JqtBg3zFr1_JYNJb66yqIheDMgsjZudELRQTSBjmQMfJH9v85tLNSbj9HPZXu5GHE/pub?embedded=true" width="800"height="600"></iframe>
+        </div>
+        <div>
+            <button id="prev-slide">Previous</button>
+            <button id="next-slide">Next</button>
+        </div>
        
     </main>
     <footer>
@@ -28,5 +37,6 @@
              document.getElementById("validation_link_disability").setAttribute("href","https://wave.webaim.org/report#/" + location.href);
      </script>
      <script src="scripts/HTMLInclude.min.js"></script>
+     <script src="scripts/slideshow.js"></script>
 </body>
 </html>
